fixed index spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -936,7 +936,7 @@
    font-family: 'open_sansregular';
    margin-left: 8px;
    margin-right: 8px;
-   margin-bottom: 16px;
+   margin-bottom: 50px;
 }
 
 .item-index-text-container{
